# DevOpsDemo-template-Rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml
api_tests/: Dockerfile  docker-compose.yaml  tests.py
src/: app.rs  config.rs  log.rs  main.rs  metrics.rs
src/app/: mod.rs
src/app/handlers/: health_check.rs  mod.rs
src/app/handlers/tests/: mod.rs
src/app/state/: log.rs  mod.rs
src/handlers/: health_check.rs  mod.rs
src/handlers/tests/: mod.rs
src/router/: mod.rs
src/router/handlers/: health_check.rs
