[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# using Rust 1.38
[dependencies]
actix-web = "1.0.0"
chrono = "0.4.9"
lazy_static = "1.4.0"
prometheus = "0.7.0"
serde_json = "1.0.40"
serde = "1.0.100"
serde_derive = "1.0.100"
slog = "2.5.2"
slog-json = "2.3.0"
slog-scope = "4.1.2"
slog-stdlog = "4.0.0"
